compiler/src/test/resources/golden/errors/main_not_pub.dawn
fn main() -> Unit !io = println("hi")
