compiler/src/test/resources/golden/errors/main_not_pub.err
error: main must be pub
  --> main_not_pub.dawn:1:4
  |
1 | fn main() -> Unit !io = println("hi")
  |    ^^^^
  = hint: write pub fn main() -> Unit !io
